@@ -190,6 +190,7 @@ Improvements:
     * Partial rendering support in evas for several gl drivers.
     * edje: use eo array of callbacks to reduce callbacks memory footprint.
     * evas: use eo array of callbacks to reduce callbacks memory footprint of Evas_Object_Box and Evas_Object_Table.
+    * evas: optimized path for when map use the same color for all corner.
 
 Fixes:
     * Fix a memory leak in ecore_con_dns when using ecore_con_server_connect
