@@ -1,3 +1,7 @@
+2013-06-19  Cedric Bail
+
+	* Evas: optimized path for when map use the same color for all corner.
+
 2013-06-18  Cedric Bail
 
 	* Evas: Use Eo array of callbacks to reduce edje memory foot print of Evas_Object_Box and Evas_Object_Table.
